--- a/ansible/Install nginx.yml
+++ b/ansible/Install nginx.yml
@@ -1,9 +1,7 @@
 ---
-- hosts: all
-  tasks:
-    - name: stop nginx
+    - name: ensure nginx is at the latest version
+      apt: name=nginx state=latest
+    - name: start nginx
       service:
           name: nginx
-          state: stopped
-    - name: ensure nginx is not installed
-      apt: name=nginx state=absent
+          state: started
