--- a/ansible/roles/nginx/tasks/main.yaml
+++ b/ansible/roles/nginx/tasks/main.yaml
@@ -1,5 +1,7 @@
     - name: ensure nginx is at the latest version
-      apt: name=nginx state=latest
+      apt: 
+          name=nginx 
+          state=latest
     - name: start nginx
       service:
           name: nginx
